--- a/blog/src/app/blog/post-form/post-form.component.html
+++ b/blog/src/app/blog/post-form/post-form.component.html
@@ -1,3 +1,14 @@
-<p>
-  post-form works!
-</p>
+<form #f="ngForm" (ngSubmit)="onSubmit()">
+  <div *ngIf="errMessage" class="alert alert-danger" role="alert">{{errMessage}}</div>
+  <div class="form-group">
+    <label for="post-title">Title</label>
+        <input [(ngModel)]="post.title" name="title" type="text" class="form-control" id="post-title" placeholder="Title">
+
+  </div>
+
+  <div class="form-group">
+    <label for="post-body">Body</label>
+    <textarea [(ngModel)]="post.body" class="form-control" cols="5" rows="5" name="body" id="post-body"></textarea>
+  </div>
+  <button type="submit" class="btn btn-primary">Create</button>
+</form>
